--- a/lab06/user_management/users/templates/users/login.html
+++ b/lab06/user_management/users/templates/users/login.html
@@ -27,10 +27,8 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                            <a href="#"
-                                                   class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
-                                            <a href="#"
-                                                   class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
+					    <a href="{% url 'social:begin' 'github' %}" class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
+					    <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
                                             <hr>
                                             <p class="text-center"><strong>OR</strong></p>
                                             <hr>
